# work-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_TEMPLATE.md  Makefile  README.md  config.example.yaml  config.yaml  pyproject.toml
docs/: database-tool-design.md  hint-management.md  mcp-tool-design.md  remote-readonly-observation-tools.md  setup.md  tool-design.md  tool-output-design.md
scripts/: check.py  doctor.py  init_config.py  inspect_jira_issue_workflow.py  preview_tool.py
src/work_assistant_mcp/: config.py  error_messages.py  hints.py  http.py  logger.py  server.py
src/work_assistant_mcp/tools/: __init__.py  dingtalk.py  jira.py  jira_client.py  jira_service.py
src/work_assistant_mcp/tools/jira/: client.py  models.py  register.py  service.py  strings.py
src/work_assistant_mcp/tools/log_search/: __init__.py  register.py  service.py  strings.py
src/work_mcp/: check.py  config.py  error_messages.py  hints.py  http.py  server.py  setup.py  startup_checks.py
src/work_mcp/tools/: __init__.py  dingtalk.py
src/work_mcp/tools/database/: factory.py  mysql.py  service.py  sqlserver.py  strings.py
src/work_mcp/tools/jira/: __init__.py  client.py  inspect.py  models.py  register.py  service.py  strings.py
src/work_mcp/tools/log_search/: constants.py  register.py  service.py  strings.py
tests/: test_check.py  test_config.py  test_database.py  test_http.py  test_jira.py  test_jira_inspect.py  test_log_search.py  test_logger.py  test_remote_fs.py  test_server_smoke.py  test_setup.py  test_startup_checks.py
(+6 files in other folders)
