[project]
name = "work-assistant-mcp"
version = "0.1.0"
description = "A personal MCP server for work-related agent tools."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.18.0",
    "pyyaml>=6.0",
    "aiofiles>=24.0",
]

[project.scripts]
work-assistant-mcp = "work_assistant_mcp:main"

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
